examples/bad/option_try_in_result.mko
// EXPECT: `?` needs Result or Option
// `?` still requires Result or Option — not bare int.
fn main() -> Result[int, string] {
    let x = 1?
    return Ok(x)
}
